# OpenAIWebScrappingUsingUVAndCursor

./: .gitignore  README.md  collect_cookies.py  dynamic_scraper.py  main.py  openai_playwright_webscrapping.py  openai_webscraper.ipynb  pyproject.toml  requirements.txt  scraper.py  scrapernew.py
