[project]
name = "openaiwebscrappingusinguvandcursor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "jupyter>=1.1.1",
    "nest-asyncio>=1.6.0",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
